--- a/02HTML/css/style.css
+++ b/02HTML/css/style.css
@@ -1,24 +1,24 @@
 *{
     padding: 0;
     margin: 0;
-    color: #aad62f;
+    color: #ffffff;
     text-align: center;
 }
 
 html, body{
-    background-color: #1776cf;
+    background-color: #9e1b04;
 
 }
 
 .main-container{
-    border: 4px solid #51D123;
+    border: 4px solid #630588;
     border-radius: 25px;
     margin:2rem;
-    background-color: rgb(50,50,50);
+    background-color: rgb(48, 47, 139);
 }
 
 nav, section, footer, article, aside{
-    border: 2px solid #8052EC;
+    border: 2px solid #7a0404;
     margin: 1rem;
     border-radius: 10px;
     padding: 1rem;
@@ -32,5 +32,5 @@ article, aside{
 }
 
 nav, section, footer{
-    background-color: rgb(123, 13, 226);
+    background-color: rgb(255, 0, 0);
 }
