--- a/Curriculum/css/styles.css
+++ b/Curriculum/css/styles.css
@@ -5,10 +5,10 @@ body {
 .izq{
     padding-left: 3px;
     padding-right: 23px;
-    float:left;
+    float:relative;
     width:17.9%;
     background-color:rgb(154, 33, 235);
-    height: 1350px;
+    height: 250px;
 }
 .der{
     float:right;
